Fix scrollbar issue

--- a/src/Chat.css
+++ b/src/Chat.css
@@ -37,6 +37,19 @@
 
 .chat__messages {
     flex: 1;
+    overflow: scroll;
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.chat__messages::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar fror IE, Edge and Firefox */
+.chat__messages {
+    -ms-overflow-style: none; /* IE and Firefox */
+    scrollbar-width: none; /* Firefox */
 }
 
 .chat__input > form > input {
